# wasm-web-components-playground

./: Cargo.toml  README.md  index.html
components/button/: Cargo.toml
components/button/src/: lib.rs
components/hello_world/: Cargo.toml
components/hello_world/src/: lib.rs
components/uuid/: Cargo.toml
components/uuid/src/: lib.rs
