[workspace]
members = [ "components/button","components/hello_world"]
resolver = "2"

[workspace.package]
authors = ["lukethacoder"]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
custom-elements = "0.2.0"
wasm-bindgen = "0.2.90"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "HtmlElement",
  "Node",
  "Text"
]}
